# lab6

./: README.md
hello_world_application/: CMakeLists.txt
hello_world_application/formatter_ex_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
