cmake_minimum_required(VERSION 3.4)
add_definitions(-std=c++0x)
project(solver)
add_executable(solver equation.cpp)
include_directories(formatter_ex_lib)
add_subdirectory(formatter_ex_lib)
include_directories(solver_lib)
add_subdirectory(solver_lib)
target_link_libraries(solver formatter_ex)
target_link_libraries(solver solver_lib)
install(TARGETS solver DESTINATION bin)
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VENDOR "Ccccompany")
set(CPACK_PACKAGE_CONTACT "https://Leningrad.ru")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "nikita.hrapov@mail.ru")
set(CPACK_PACKAGE_DESCRIPTION "Not bad package :3")
#set(CPACK_GENERATOR "DragNDrop")
#set(CPACK_GENERATOR "DEB")
set(CPACK_GENERATOR "RPM" "DEB")
include(CPack)

#cmake . && cmake --build . && cmake --build . --target package_source
